# cuex

./: .gitignore  README.md  pyproject.toml
src/cuex/: __init__.py  cli.py  output.py  runner.py
tests/: __init__.py  test_cli.py  test_output.py
