[project]
name = "cuex"
version = "0.0.1"
description = "Run CUDA/C++ code on remote GPUs via Modal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Zach Nussbaum" }]
keywords = ["cuda", "gpu", "modal", "remote-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "modal>=0.64.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
cuex = "cuex.cli:app"

[project.urls]
Homepage = "https://github.com/zanussbaum/cuex"
Repository = "https://github.com/zanussbaum/cuex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuex"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (required for Typer)
]

[tool.ruff.lint.isort]
known-first-party = ["cuex"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
